# monster-tamer

./: Cargo.toml
assets/: def_schema.json
assets/defs/: biomes.json  monsters.json  moves.json  types.json
assets/monsters/001/: 001.monster.json  model.blend  model.glb
assets/player/: player.blend  player.blend1  player.glb
assets/world/: world.blend  world.glb
src/: def_database.rs  def_types.rs  ground.rs  json_asset_definition.rs  jumping.rs  main.rs  prelude.rs  shared.rs
src/monsters/: mod.rs  monster_definition.rs  monster_move.rs  monster_type.rs
src/player/: mod.rs  movement.rs  player_monster.rs  roaming_camera.rs  spawn_player.rs
src/world/: biome.rs  mod.rs
