[package]
name = "monster-tamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
leafwing-input-manager = "0.9"
bevy_hanabi = { version = "0.6", default-features = false, features = [ "3d" ] }
big-brain = "0.17"
bevy_rapier3d = { version = "0.21", features = [ "simd-stable", "parallel", "debug-render-3d" ] }
serde = "1.0"
serde_json = "1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1